--- a/src/app/layout/resultat-test/resultat-test.component.html
+++ b/src/app/layout/resultat-test/resultat-test.component.html
@@ -15,7 +15,7 @@
         <div class="dash-widget">
           <span class="dash-widget-bg1"><i class="fa fa-stethoscope" aria-hidden="true"></i></span>
           <div class="dash-widget-info text-right">
-            <h3>{{tests.length}}</h3>
+            <h3>5</h3>
             <span class="widget-title1">Tests <i class="fa fa-check" aria-hidden="true"></i></span>
           </div>
         </div>
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <!--<div class="row">
       <div class="search-box">
         <div class="input-group input-group-md" style="margin-left: 15px; background-color: #fafafa;">
           <input type="text" class="form-control" placeholder="N° anonymat" name="search" [(ngModel)]="search">
@@ -39,7 +39,7 @@
           </span>
         </div>
       </div>
-    </div><br>
+    </div><br>-->
     <div class="row">
       <div class="col-md-12">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
