--- a/src/app/layout/appointments/appointments.component.html
+++ b/src/app/layout/appointments/appointments.component.html
@@ -1,19 +1,22 @@
 <div class="page-wrapper">
   <div class="content">
     <div class="row">
-      <div class="col-sm-4 col-3">
+      <div class="col-sm-4 col-4">
         <h4 class="page-title">Rendez Vous</h4>
       </div>
-      <div class="col-sm-8 col-9 text-right m-b-20">
+      <div class="col-sm-6 col-6 text-right m-b-20">
         <!--<a href="add-doctor.html" class="btn btn-primary btn-rounded float-right"><i class="fa fa-plus"></i> Ajouter un rendez vous</a>-->
         <div class="search-box float-right">
-          <div class="input-group input-group-md" style="margin-left: 15px; background-color: #fafafa;">
-            <input type="text" class="form-control" placeholder="Rechercher" name="search">
-            <span class="input-group-append">
-            <button class="btn" type="button"><i class="fa fa-search"></i></button>
-          </span>
+          <div class="input-group input-group-md" style="background-color: #fafafa;">
+            <input type="text" class="form-control" placeholder="Rechercher par date" onfocus="(this.type='date')" name="search" [(ngModel)]="search" (change)="searchAppointment()">
+            <!--<span class="input-group-append">
+              <button class="btn" type="button" (click)="searchAppointment()"><i class="fa fa-search"></i></button>
+            </span>-->
           </div>
         </div>
+      </div>
+      <div class="col-sm-2 col-2 float-right">
+        <button type="submit" class="btn btn-primary-one" (click)="refreshPage()"  style="margin-left: 35px; background-color: transparent; color: #96ab5c" [hidden]="search =='' ? true:false">Actualiser</button>
       </div>
     </div><br/>
     <div class="row doctor-grid">
@@ -222,215 +225,5 @@
         </div>
       </div>
     </div>-->
-  </div>
-
-  <div class="notification-box">
-    <div class="msg-sidebar notifications msg-noti">
-      <div class="topnav-dropdown-header">
-        <span>Messages</span>
-      </div>
-      <div class="drop-scroll msg-list-scroll" id="msg_list">
-        <ul class="list-box">
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">R</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author">Richard Miles </span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item new-message">
-                <div class="list-left">
-                  <span class="avatar">J</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author">John Doe</span>
-                  <span class="message-time">1 Aug</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">T</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author"> Tarah Shropshire </span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">M</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author">Mike Litorus</span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">C</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author"> Catherine Manseau </span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">D</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author"> Domenic Houston </span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">B</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author"> Buster Wigton </span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">R</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author"> Rolland Webber </span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">C</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author"> Claire Mapes </span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">M</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author">Melita Faucher</span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">J</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author">Jeffery Lalor</span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">L</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author">Loren Gatlin</span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="chat.html">
-              <div class="list-item">
-                <div class="list-left">
-                  <span class="avatar">T</span>
-                </div>
-                <div class="list-body">
-                  <span class="message-author">Tarah Shropshire</span>
-                  <span class="message-time">12:28 AM</span>
-                  <div class="clearfix"></div>
-                  <span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-                </div>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="topnav-dropdown-footer">
-        <a href="chat.html">See all messages</a>
-      </div>
-    </div>
   </div>
 </div>
