--- a/src/app/layout/preleveur/preleveur.component.html
+++ b/src/app/layout/preleveur/preleveur.component.html
@@ -30,73 +30,73 @@
                     </div>
                   </div>
                   <div class="profile-basic">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Nom complet</label>
-                          <input type="text" class="form-control floating" value="">
+                    <form [formGroup]="form" (ngSubmit)="save()">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Nom complet</label>
+                            <input type="text" class="form-control floating" value="" formControlName="name">
+                          </div>
                         </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Date de naissance</label>
-                          <div class="cal-icon">
-                            <input type="text" class="form-control floating datetimepicker" value="">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Date de naissance</label>
+                            <input type="text" class="form-control floating" value="" formControlName="birthday" onfocus="(this.type='date')">
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Sexe</label>
-                          <select class="select form-control floating">
-                            <option value="Masculin">Masculin</option>
-                            <option value="Feminin">Féminin</option>
-                          </select>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Sexe</label>
+                            <select class="form-control floating" formControlName="sexe">
+                              <option value="Masculin">Masculin</option>
+                              <option value="Feminin">Féminin</option>
+                            </select>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Télephone</label>
+                            <input type="text" class="form-control floating" value="" formControlName="phone">
+                           </div>
                         </div>
                       </div>
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Télephone</label>
-                          <input type="text" class="form-control floating" value="">
-                         </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Adresse email</label>
-                          <input type="text" class="form-control floating" value="">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Adresse email</label>
+                            <input type="text" class="form-control floating" value="" formControlName="email">
+                          </div>
                         </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form-group form-focus select-focus">
-                          <label class="focus-label">Centre agréé</label>
-                          <select class="select form-control floating">
-                            <option [ngValue]=labo.id *ngFor="let labo of laboratoires">{{labo.name}}</option>
-                          </select>
+                        <div class="col-md-6">
+                          <div class="form-group form-focus select-focus">
+                            <label class="focus-label">Centre agréé</label>
+                            <select class="select form-control floating">
+                              <option [ngValue]=labo.id *ngFor="let labo of laboratoires">{{labo.name}}</option>
+                            </select>
+                          </div>
                         </div>
-                      </div>
 
-                    </div>
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Nom d'utilisateur</label>
-                          <input type="text" class="form-control floating" value="">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Nom d'utilisateur</label>
+                            <input type="text" class="form-control floating" value="" formControlName="username">
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <div class="form-group form-focus">
+                            <label class="focus-label">Mot de passe</label>
+                            <input type="password" class="form-control floating" value="" style="position: relative;" formControlName="password">
+                            <!--<span class="p-viewer">
+                              <i class="fa fa-eye" aria-hidden="true"></i>
+                            </span>-->
+                          </div>
                         </div>
                       </div>
-                      <div class="col-md-6">
-                        <div class="form-group form-focus">
-                          <label class="focus-label">Mot de passe</label>
-                          <input type="password" class="form-control floating" value="" style="position: relative;">
-                          <!--<span class="p-viewer">
-                            <i class="fa fa-eye" aria-hidden="true"></i>
-                          </span>-->
-                        </div>
-                      </div>
-                    </div>
+                    </form>
                   </div>
                 </div>
               </div>
