--- a/src/app/layout/resultat-vaccin/resultat-vaccin.component.html
+++ b/src/app/layout/resultat-vaccin/resultat-vaccin.component.html
@@ -15,7 +15,7 @@
         <div class="dash-widget">
           <span class="dash-widget-bg1"><i class="fa fa-stethoscope" aria-hidden="true"></i></span>
           <div class="dash-widget-info text-right">
-            <h3>{{tests.length}}</h3>
+            <h3>50</h3>
             <span class="widget-title1">Tests <i class="fa fa-check" aria-hidden="true"></i></span>
           </div>
         </div>
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <!--<div class="row">
       <div class="search-box">
         <div class="input-group input-group-md" style="margin-left: 15px; background-color: #fafafa;">
           <input type="text" class="form-control" placeholder="N° anonymat" name="search" [(ngModel)]="search">
@@ -39,7 +39,7 @@
           </span>
         </div>
       </div>
-    </div><br>
+    </div><br>-->
     <div class="row">
       <div class="col-md-12">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
@@ -66,7 +66,7 @@
             <h5 style="margin-bottom: 15px; margin-right: 10px;margin-left: 20px;" *ngIf="vaccinEffectuer.length > 0">Vaccins effectués sur le patient</h5>
             <div class="row" *ngIf="vaccinEffectuer.length > 0">
               <div class="col-md-3" *ngFor="let obj of vaccinEffectuer">
-                <input type="text" class="form-control rounded" value="{{obj.nomVaccin}}"/>
+                <input type="text" class="form-control rounded" value="{{obj.nomVaccin}}" readonly/>
               </div>
             </div><br *ngIf="vaccinEffectuer.length > 0"/>
             <!--<div class="form-group row">
