--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,130 +10,147 @@
           <div class="account-logo">
             <a href="#"><img src="assets/img/logo_meduim.jpeg" alt="Awaycovid"></a>
           </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Nom et prénom</label>
-              <input type="text" class="form-control floating" formControlName="name" value="" style="margin-top: 10px;">
+          <h4 style="margin-top: 50px;margin-bottom: 15px; text-align: center">Register</h4><hr>
+          <div *ngIf="step1 == 1">
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Nom et prénom</label>
+                <input type="text" class="form-control floating" formControlName="name" value="" style="margin-top: 10px;">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Date de naissance</label>
+                <input type="text" class="form-control floating" value="" style="margin-top: 10px;" formControlName="birthday" onfocus="(this.type='date')">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group form-focus select-focus">
+                <label class="focus-label">Sexe</label>
+                <select class="form-control floating" formControlName="sexe">
+                  <option value="MASCULIN">Masculin</option>
+                  <option value="FEMININ">Féminin</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group form-focus select-focus">
+                <label class="focus-label">Pays</label>
+                <select class="form-control floating" formControlName="pays" (change)="getDialCode($event)" >
+                  <option *ngFor="let country of pays" [ngValue]="country.alpha3Code">{{country.name}}</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group form-focus select-focus">
+                <label class="focus-label">Ville</label>
+                <select class="form-control floating" formControlName="ville">
+                  <option value="Douala">Douala</option>
+                  <option value="Yaounde">Yaoundé</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-12 row" style="width: 100%;">
+              <div class="form-group form-focus col-md-3">
+                <label class="focus-label"></label>
+                <input type="text" class="form-control " value="{{dialCode}}" readonly style="margin-top: 10px; border-top: none;border-left: none;border-right:none; background-color: white">
+              </div>
+              <div class="form-group form-focus col-md-9">
+                <label class="focus-label" style="margin-left: 10px;">Téléphone</label>
+                <input type="text" class="form-control floating" value="" formControlName="phone" style="margin-top: 10px;">
+              </div>
+            </div>
+            <div class="text-right" style="margin-top: 25px;">
+              <button type="submit" class="btn btn-primary-one" (click)="enableStep2()">Next</button>
             </div>
           </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Date de naissance</label>
-              <input type="text" class="form-control floating" value="" style="margin-top: 10px;" formControlName="birthday" onfocus="(this.type='date')">
+
+          <div *ngIf="step2 == 1">
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Nom d'utilisateur</label>
+                <input type="text" class="form-control floating" value="" formControlName="username" style="margin-top: 10px;">
+              </div>
             </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus select-focus">
-              <label class="focus-label">Sexe</label>
-              <select class="form-control floating" formControlName="sexe">
-                <option value="MASCULIN">Masculin</option>
-                <option value="FEMININ">Féminin</option>
-              </select>
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Email</label>
+                <input type="email" class="form-control floating" formControlName="email" value="" style="margin-top: 10px;" autocomplete="false">
+              </div>
             </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Nom d'utilisateur</label>
-              <input type="text" class="form-control floating" value="" formControlName="username" style="margin-top: 10px;">
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Email</label>
-              <input type="email" class="form-control floating" formControlName="email" value="" style="margin-top: 10px;" autocomplete="false">
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Mot de passe</label>
-              <!--<input type="text" class="form-control floating" value="" style="margin-top: 10px;">-->
-              <div class="input-group mb-3">
-                <input type="password" class="form-control floating" #pwd formControlName="password" style="margin-top: 10px;" autocomplete="false">
-                <div class="input-group-append" style="margin-top: 10px; height: 50px;">
-                  <span class="input-group-text fa fa-eye"  (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'password'"></span>
-                  <span class="input-group-text fa fa-eye-slash" (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'text'"></span>
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Mot de passe</label>
+                <!--<input type="text" class="form-control floating" value="" style="margin-top: 10px;">-->
+                <div class="input-group mb-3">
+                  <input type="password" class="form-control floating" #pwd formControlName="password" style="margin-top: 10px;" autocomplete="false">
+                  <div class="input-group-append" style="margin-top: 10px; height: 50px;">
+                    <span class="input-group-text fa fa-eye"  (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'password'"></span>
+                    <span class="input-group-text fa fa-eye-slash" (click)="passwordVisibility(pwd)" *ngIf="pwd.type == 'text'"></span>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus select-focus">
-              <label class="focus-label">Pays</label>
-              <select class="form-control floating" formControlName="pays" (change)="getDialCode($event)" >
-                <option *ngFor="let country of pays" [ngValue]="country.alpha3Code">{{country.name}}</option>
-              </select>
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Photo de profil</label>
+                <input type="file" class="form-control floating" value="" formControlName="imageSelfie" (change)="uploadImageProfil($event)" style="margin-top: 10px;">
+              </div>
             </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus select-focus">
-              <label class="focus-label">Ville</label>
-              <select class="form-control floating" formControlName="ville">
-                <option value="Douala">Douala</option>
-                <option value="Yaounde">Yaoundé</option>
-              </select>
-            </div>
-          </div>
-          <div class="col-md-12 row" style="width: 100%;">
-            <div class="form-group form-focus col-md-3">
-              <label class="focus-label"></label>
-              <input type="text" class="form-control " value="{{dialCode}}" readonly style="margin-top: 10px; border-top: none;border-left: none;border-right:none; background-color: white">
-            </div>
-            <div class="form-group form-focus col-md-9">
-              <label class="focus-label" style="margin-left: 10px;">Téléphone</label>
-              <input type="text" class="form-control floating" value="" formControlName="phone" style="margin-top: 10px;">
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Numéro de passeport</label>
-              <input type="text" class="form-control floating" value="" formControlName="numeroPassport" style="margin-top: 10px;">
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Date expiration</label>
-              <input type="text" class="form-control floating" value="" formControlName="dateExpiration" onfocus="(this.type='date')" style="margin-top: 10px;">
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus select-focus">
-              <label class="focus-label">Type de passeport</label>
-              <select class="form-control floating" formControlName="typePassport">
-                <option [ngValue]="type.id" *ngFor="let type of passportType">{{type.label}}</option>
-              </select>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Photo du passeport</label>
-              <input type="file" class="form-control floating" value="" (change)="onFileChanged($event)" formControlName="imagePassport" style="margin-top: 10px;">
-            </div>
-          </div>
-          <div class="col-md-12 row">
-            <a class="chat-img-attach"   *ngIf="urlPassportImage != null">
-              <img width="182" height="137" alt="image du passeport" [src]="urlPassportImage">
-              <!--<div class="chat-placeholder">
-                <div class="chat-img-name">image du passeport</div>
-              </div>-->
-            </a>
-          </div>
-
-          <div class="col-md-12">
-            <div class="form-group form-focus">
-              <label class="focus-label">Photo de profil</label>
-              <input type="file" class="form-control floating" value="" formControlName="imageSelfie" (change)="uploadImageProfil($event)" style="margin-top: 10px;">
-            </div>
-          </div>
             <div class="account-logo">
               <a href="#">
                 <img alt="Photo de profil" [src]="urlProfilImage" class="img-fluid rounded-circle" *ngIf="urlProfilImage != null">
               </a>
             </div>
-          <div class="form-group text-center">
-            <button class="btn btn-primary account-btn" type="submit">Signup</button>
+            <div class="text-right" style="margin-top: 25px;">
+              <button type="submit" class="btn btn-secondary-one" (click)="enableStep1()">Previous</button>&nbsp;&nbsp;
+              <button type="submit" class="btn btn-primary-one" (click)="enableStep3()">Next</button>
+            </div>
           </div>
-          <div class="text-center login-link">
-            Already have an account? <a routerLink="/login">Login</a>
+
+          <div *ngIf="step3 == 1">
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Numéro de passeport</label>
+                <input type="text" class="form-control floating" value="" formControlName="numeroPassport" style="margin-top: 10px;">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Date expiration</label>
+                <input type="text" class="form-control floating" value="" formControlName="dateExpiration" onfocus="(this.type='date')" style="margin-top: 10px;">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group form-focus select-focus">
+                <label class="focus-label">Type de passeport</label>
+                <select class="form-control floating" formControlName="typePassport">
+                  <option [ngValue]="type.id" *ngFor="let type of passportType">{{type.label}}</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group form-focus">
+                <label class="focus-label">Photo du passeport</label>
+                <input type="file" class="form-control floating" value="" (change)="onFileChanged($event)" formControlName="imagePassport" style="margin-top: 10px;">
+              </div>
+            </div>
+            <div class="col-md-12 row">
+              <a class="chat-img-attach"   *ngIf="urlPassportImage != null">
+                <img width="182" height="137" alt="image du passeport" [src]="urlPassportImage">
+                <!--<div class="chat-placeholder">
+                  <div class="chat-img-name">image du passeport</div>
+                </div>-->
+              </a>
+            </div>
+            <div class="text-right" style="margin-top: 25px;">
+              <button type="submit" class="btn btn-secondary-one" (click)="enableStep2()">Previous</button>&nbsp;&nbsp;
+              <button type="submit" class="btn btn-primary-one">Signup</button>
+            </div>
+          </div>
+
+          <div class="text-center login-link" style="margin-top: 15px;">
+            Vous avez déjà un compte? <a routerLink="/login">Se connecter</a>
           </div>
         </form>
       </div>
