--- a/src/app/layout/preleveur/preleveur.component.html
+++ b/src/app/layout/preleveur/preleveur.component.html
@@ -72,7 +72,7 @@
                         <div class="col-md-6">
                           <div class="form-group form-focus select-focus">
                             <label class="focus-label">Centre agréé</label>
-                            <select class="select form-control floating">
+                            <select class="form-control floating" formControlName="laboratoire">
                               <option [ngValue]=labo.id *ngFor="let labo of laboratoires">{{labo.name}}</option>
                             </select>
                           </div>
@@ -102,7 +102,7 @@
               </div>
             </div>
             <div class="text-right" style="margin-top: 25px;">
-              <button type="submit" class="btn btn-secondary-one">Annuler</button>&nbsp;&nbsp;
+              <button type="submit" class="btn btn-secondary-one" (click)="resetForm()">Annuler</button>&nbsp;&nbsp;
               <button type="submit" class="btn btn-primary-one" (click)="save()">Enregistrer</button>
             </div>
           </div>
