--- a/src/app/layout/util-component/header/header.component.html
+++ b/src/app/layout/util-component/header/header.component.html
@@ -7,7 +7,7 @@
   <a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
   <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"><i class="fa fa-bars"></i></a>
   <ul class="nav user-menu float-right">
-    <li class="nav-item dropdown d-none d-sm-block">
+    <!--<li class="nav-item dropdown d-none d-sm-block">
       <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><i class="fa fa-bell-o"></i> <span class="badge badge-pill bg-danger float-right">3</span></a>
       <div class="dropdown-menu notifications">
         <div class="topnav-dropdown-header">
@@ -81,14 +81,9 @@
     </li>
     <li class="nav-item dropdown d-none d-sm-block">
       <a href="javascript:void(0);" id="open_msg_box" class="hasnotifications nav-link"><i class="fa fa-comment-o"></i> <span class="badge badge-pill bg-danger float-right">8</span></a>
-    </li>
+    </li>-->
     <li class="nav-item dropdown has-arrow">
       <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
-        <!--<span class="user-img">
-          <img class="rounded-circle" src="assets/img/user.jpg" width="24" alt="Admin">
-          <span class="status online"></span>
-        </span>
-        &nbsp;<span>{{userConnected.username}}</span>-->
         <i class="fa fa-globe" style="font-size: 20px;"></i>
       </a>
       <div class="dropdown-menu">
@@ -103,7 +98,7 @@
           <img class="rounded-circle" src="assets/img/user.jpg" width="24" alt="Admin">
           <span class="status online"></span>
         </span>
-        &nbsp;<span>{{userConnected.username}}</span>
+        &nbsp;<span>{{username}}</span>
       </a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="#" translate>My Profile</a>
