--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -149,6 +149,12 @@
             </div>
           </div>
 
+         <!-- <div style="text-align:center;margin-top:40px;">
+            <span class="step" [style.background-color]="step1 == 1? '#96ab5c' : '#bbbbbb'"></span>
+            <span class="step" [style.background-color]="step2 == 1? '#96ab5c' : '#bbbbbb'"></span>
+            <span class="step" [style.background-color]="step3 == 1? '#96ab5c' : '#bbbbbb'"></span>
+          </div>-->
+
           <div class="text-center login-link" style="margin-top: 15px;">
             Vous avez déjà un compte? <a routerLink="/login">Se connecter</a>
           </div>
